<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:background="@android:color/holo_orange_dark"
                                                   android:id="@+id/game_layout">
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.07"/>
    <Button
            android:text="@string/Play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_game_play_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.4"
            android:background="@android:color/holo_green_dark"/>
    <TextView
            android:text="@string/nbstep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragement_game_text_step" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:layout_width="350dp"
            android:layout_height="600dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/fragment_game_list_layout" app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/Stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_game_stop_button"
            app:layout_constraintStart_toEndOf="@+id/fragment_game_play_button"
            android:layout_marginLeft="28dp" android:layout_marginStart="28dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.4" android:background="@android:color/holo_red_dark"/>
    <Button
            android:text="@string/pulsar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pulsarButton" android:textSize="12sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/gliderButton" android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp" app:layout_constraintTop_toBottomOf="@+id/fragment_game_stop_button"/>
    <Button
            android:text="@string/glider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gliderButton" android:textSize="12sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_game_play_button"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
    />
    <TextView
            android:text="Step : "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game_fragment_textView2" app:layout_constraintEnd_toStartOf="@+id/fragement_game_text_step"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>
</androidx.constraintlayout.widget.ConstraintLayout>